# graphic-with-WxWidget

Lab3/Final/: Main.cpp
Lab3/Final/upload/: Read_me.txt  output
Lab3/While_not_working/: Lab.fbp  Main.cpp  MyProject1MyFrame5.cpp  MyProject1MyFrame5.h  noname.cpp  noname.h  output
Lab4/Before/: CMakeLists.txt  ChartClass.cpp  ChartClass.h  GUI.cpp  GUIMyFrame1.cpp  output  test1  test2.cfg
Lab4/Source/: ChartClass.cpp  ChartClass.h  GUI.h  output
Lab5/Lab_5/: GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  output  vecmat.cpp  vecmat.h
Lab5/Szkic/: CMakeLists.txt  GUI.cpp  GUIMyFrame1.cpp  GUIMyFrame1.h  vecmat.cpp  vecmat.h
Lab6/Lab_6/: CMakeLists.txt  GUIMyFrame1.cpp  GUIMyFrame1.h  lab06_linux_demo  main.cpp
Lab7/Lab_7/: CMakeLists.txt  draw_map.cpp
Lab8/Lab_8/: CMakeLists.txt  GUIMyFrameMyFrame1.cpp  GUIMyFrameMyFrame1.h  Lab08.cpp  Main.h  MyVeryOwnClass.cpp  MyVeryOwnClass.h  Project.fbp
